# backend/src/models/order.ts
@@ -1,29 +1,31 @@
-import { Category, Shop, AdditionalData, OrderStatus, PaymentMethod, PaymentStatus, PriceBag } from "./common";
+import { OrderStatus, PaymentMethod, PaymentStatus, PriceBag , TotalBill} from "./common";
 import mongoose from "mongoose";
 
 
-export interface Oder {
+export interface Order {
     id: number;
     productList: PriceBag[];
-    totalPrice: number;
+    totalPrice: TotalBill;
     status: OrderStatus;
     paymentMethod: PaymentMethod;
     paymentStatus: PaymentStatus;
     userId: string;
     userLocation: string;
     discount?: number;
+    additionalNote?: string; 
     timestamp: number;
 }
 export interface IOder extends mongoose.Document {
     id: number;
     bill: string;
-    totalPrice: number;
+    totalPrice: string;
     status: OrderStatus;
     paymentMethod: PaymentMethod;
     paymentStatus: PaymentStatus;
     userId: string;
     userLocation: string;
     discount?: number;
+    additionalNote?: string; 
     timestamp: number;
 }
 
@@ -31,13 +33,14 @@ const orderSchema = new mongoose.Schema<IOder>(
     {
         id: { type: Number, required: true },
         bill: { type: String, required: true },
-        totalPrice: { type: Number, required: true },
+        totalPrice: { type: String, required: true },
         status: { type: String, enum: Object.values(OrderStatus), required: true },
         paymentMethod: { type: String, enum: Object.values(PaymentMethod), required: true },
         paymentStatus: { type: String, enum: Object.values(PaymentStatus), required: true },
         userId: { type: String, required: true },
         userLocation: { type: String, required: true },
         discount: { type: Number, required: false },
+        additionalNote: { type: Number, required: false },
         timestamp: { type: Number, required: true }
     },
     {
@@ -48,7 +51,7 @@ const orderSchema = new mongoose.Schema<IOder>(
 
 orderSchema.index({ id: 1 }, { unique: true });
 orderSchema.index({ status: 1 });
-orderSchema.index({ totalPrice: 1 });
+orderSchema.index({ userId: 1 });
 orderSchema.index({ timestamp: -1 });
 
 orderSchema.set('toJSON', {
